--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "parcel-bundler": "^1.12.3"
   },
   "dependencies": {
+    "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link-context": "^1.0.17",
+    "apollo-link-schema": "^1.2.2",
     "apollo-link-ws": "^1.0.17",
     "cross-env": "^5.2.0",
-    "graphql": "^0.11.0 || ^0.12.0 || ^0.13.0 || ^14.0.0",
+    "graphql": "0.11.7 || ^0.12.0 || ^0.13.0 || ^14.0.0",
     "graphql-tag": "^2.10.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
