--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
-    "parcel": "cross-env NODE_ENV=development parcel index.html ",
+    "dev": "cross-env NODE_ENV=development parcel index.html ",
     "build": "cross-env NODE_ENV=production parcel build index.html --no-minify --public-url /"
   },
   "repository": {
@@ -24,14 +24,18 @@
     "parcel-bundler": "^1.12.3"
   },
   "dependencies": {
+    "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
     "apollo-link-context": "^1.0.17",
     "apollo-link-schema": "^1.2.2",
+    "apollo-link-state": "^0.4.2",
     "apollo-link-ws": "^1.0.17",
     "cross-env": "^5.2.0",
-    "graphql": "0.11.7 || ^0.12.0 || ^0.13.0 || ^14.0.0",
+    "graphql": "^14.3.0",
+    "graphql-iso-date": "^3.6.1",
     "graphql-tag": "^2.10.1",
+    "graphql-tools": "^4.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-apollo": "^2.5.5",
