--- a/package.json
+++ b/package.json
@@ -21,10 +21,15 @@
   },
   "homepage": "https://github.com/evanx/react-starter-mlk#readme",
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
     "jest": "^24.8.0",
     "parcel-bundler": "^1.12.3"
   },
   "dependencies": {
+    "@material-ui/core": "^4.2.0",
+    "@material-ui/icons": "^4.2.1",
     "apollo-boost": "^0.3.1",
     "apollo-cache-inmemory": "^1.5.1",
     "apollo-client": "^2.5.1",
